--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+h1 {
+  background-image: linear-gradient(#d3d3d3, white);
+}
+.customers {
+  display: inline-flex;
+  height: 400px;
+  width: 230px;
+  border-style: groove;
+  border-color: #d3d3d3;
+  border-radius: 10px;
+  margin: 5px;
+}
