--- a/app/views/customers/alphabetized.html.erb
+++ b/app/views/customers/alphabetized.html.erb
@@ -1,2 +1,3 @@
-<h1>Customers#alphabetized</h1>
-<p>Find me in app/views/customers/alphabetized.html.erb</p>
+<h1>Customers Alphabetized</h1>
+
+<%= render partial:"customer", collection: @customers %>
