--- a/app/views/customers/alphabetized.html.erb
+++ b/app/views/customers/alphabetized.html.erb
@@ -1,3 +1,3 @@
 <h1>Customers Alphabetized</h1>
-
+<div><%= link_to "All Customers", root_path %> | <%= link_to "Customers Missing Email", customers_missing_email_path %></div>
 <%= render partial:"customer", collection: @customers %>
