--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,3 @@
 <h1>All Customers</h1>
-
+<div><%= link_to "Alphabetized", customers_alphabetized_path %> | <%= link_to "Customers Missing Email", customers_missing_email_path %></div>
 <%= render partial:"customer", collection: @customers %>
