--- a/app/views/customers/missing_email.html.erb
+++ b/app/views/customers/missing_email.html.erb
@@ -1,3 +1,3 @@
 <h1>Customers are missing email</h1>
-
+<div><%= link_to "All Customers", root_path %> | <%= link_to "Customers Alphabetized", customers_alphabetized_path %></div>
 <%= render partial:"customer", collection: @customers %>
